fix mobile screen distortion on project pages

--- a/style.css
+++ b/style.css
@@ -235,7 +235,6 @@ div.project h3 {
   div.project h3,
   .work-img {
     width: 75%;
-    height: 600px;
   }
 }
 
